--- a/AutogradNumpy.ipynb
+++ b/AutogradNumpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5794af26-027d-42a4-b0be-9f89cd3efd72",
    "metadata": {
     "id": "5794af26-027d-42a4-b0be-9f89cd3efd72"
@@ -1132,7 +1132,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1146,7 +1146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
