--- a/ECE490_Python1_LFrancis.ipynb
+++ b/ECE490_Python1_LFrancis.ipynb
@@ -5605,7 +5605,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
