data unpacked lol

--- a/HW5/Updated files/microtorch.ipynb
+++ b/HW5/Updated files/microtorch.ipynb
@@ -1001,17 +1001,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.collections.PathCollection at 0x7fadf117f6a0>,\n",
-       " <matplotlib.collections.PathCollection at 0x7fadef599f40>]"
+       "[<matplotlib.collections.PathCollection at 0x7f5585312640>,\n",
+       " <matplotlib.collections.PathCollection at 0x7f5581d01d90>]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1085,29 +1085,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lr: 1e-06 loss: 5368.841098479633 delta loss:  -140.9123566260114\n",
-      "lr: 1e-06 loss: 5106.595874396649 delta loss:  -262.24522408298344\n",
-      "lr: 1e-06 loss: 4764.392061225392 delta loss:  -342.203813171257\n",
-      "lr: 1e-06 loss: 4375.658277754774 delta loss:  -388.7337834706186\n",
-      "lr: 1e-06 loss: 3953.8431519978935 delta loss:  -421.8151257568802\n",
-      "lr: 1e-06 loss: 3502.698700009042 delta loss:  -451.1444519888514\n",
-      "lr: 1e-06 loss: 3022.1544379578654 delta loss:  -480.5442620511767\n",
-      "lr: 1e-06 loss: 2511.2933854912253 delta loss:  -510.8610524666401\n",
-      "lr: 1e-06 loss: 1970.7258391554838 delta loss:  -540.5675463357416\n",
-      "lr: 1e-06 loss: 1398.1074978306206 delta loss:  -572.6183413248632\n",
-      "lr: 1e-06 loss: 872.4422440619603 delta loss:  -525.6652537686602\n",
-      "lr: 1e-06 loss: 685.260496272613 delta loss:  -187.18174778934736\n",
-      "lr: 1e-06 loss: 545.5009698732008 delta loss:  -139.75952639941215\n",
-      "lr: 1e-06 loss: 444.5852877471134 delta loss:  -100.9156821260874\n",
-      "lr: 1e-06 loss: 378.03404380375525 delta loss:  -66.55124394335814\n",
-      "lr: 1e-06 loss: 339.2937019330018 delta loss:  -38.74034187075347\n",
-      "lr: 1e-06 loss: 317.59683875939857 delta loss:  -21.69686317360322\n",
-      "lr: 1e-06 loss: 311.91405490942395 delta loss:  -5.682783849974612\n",
-      "lr: 1e-06 loss: 322.3678221130345 delta loss:  10.45376720361054\n",
-      "lr: 5e-07 loss: 333.8344575283227 delta loss:  11.46663541528818\n",
-      "lr: 2.5e-07 loss: 341.3687716807074 delta loss:  7.534314152384752\n",
-      "lr: 1.25e-07 loss: 345.5907099019446 delta loss:  4.221938221237167\n",
-      "lr: 6.25e-08 loss: 347.84940781354794 delta loss:  2.258697911603349\n"
+      "lr: 1e-06 loss: 7652.078298050041 delta loss:  -165.16901847395366\n",
+      "lr: 1e-06 loss: 7325.412474005321 delta loss:  -326.66582404471956\n",
+      "lr: 1e-06 loss: 6844.401331915382 delta loss:  -481.0111420899393\n",
+      "lr: 1e-06 loss: 6219.295841014355 delta loss:  -625.1054909010272\n",
+      "lr: 1e-06 loss: 5462.8893394684565 delta loss:  -756.4065015458982\n",
+      "lr: 1e-06 loss: 4589.804169652096 delta loss:  -873.0851698163606\n",
+      "lr: 1e-06 loss: 3615.637728893387 delta loss:  -974.1664407587091\n",
+      "lr: 1e-06 loss: 2576.648078361043 delta loss:  -1038.9896505323436\n",
+      "lr: 1e-06 loss: 1728.1806018387965 delta loss:  -848.4674765222467\n",
+      "lr: 1e-06 loss: 1059.2393171196113 delta loss:  -668.9412847191852\n",
+      "lr: 1e-06 loss: 444.19876971674455 delta loss:  -615.0405474028668\n",
+      "lr: 1e-06 loss: 205.46082978366752 delta loss:  -238.73793993307703\n",
+      "lr: 1e-06 loss: 168.27514573444842 delta loss:  -37.185684049219105\n",
+      "lr: 1e-06 loss: 168.89148662808296 delta loss:  0.6163408936345434\n"
      ]
     },
     {
@@ -1117,7 +1108,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3111/904017604.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;31m# Use the trained model on test dataset and compute the test accuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 84\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_6117/904017604.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;31m# Use the trained model on test dataset and compute the test accuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 84\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNotImplementedError\u001b[0m: "
      ]
     }
@@ -1205,13 +1196,12 @@
     "trained_model = train_by_gradient_descent(model, loss, features, labels)\n",
     "\n",
     "# Use the trained model on test dataset and compute the test accuracy\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1221,8 +1211,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3111/603807912.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimage_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mimages\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mtest_images\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmnist_read_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/t10k-images-idx3-ubyte'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0mtest_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmnist_read_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/t10k-labels-idx1-ubyte'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mzero_one_filter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtest_labels\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtest_labels\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_3111/603807912.py\u001b[0m in \u001b[0;36mmnist_read_images\u001b[0;34m(fname)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# Ref:https://github.com/sorki/python-mnist/blob/master/mnist/loader.py\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmnist_read_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data/train-images-idx3-ubyte'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0;31m# The file starts with 4 byte 4 unsigned ints\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mmagic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstruct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munpack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'>IIII'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_6117/603807912.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimage_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mimages\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mtest_images\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmnist_read_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/t10k-images-idx3-ubyte'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0mtest_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmnist_read_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/t10k-labels-idx1-ubyte'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mzero_one_filter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtest_labels\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtest_labels\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_6117/603807912.py\u001b[0m in \u001b[0;36mmnist_read_images\u001b[0;34m(fname)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# Ref:https://github.com/sorki/python-mnist/blob/master/mnist/loader.py\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmnist_read_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data/train-images-idx3-ubyte'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0;31m# The file starts with 4 byte 4 unsigned ints\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mmagic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstruct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munpack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'>IIII'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/t10k-images-idx3-ubyte'"
      ]
     }
